Change header color, add assets folder

--- a/bar.html
+++ b/bar.html
@@ -14,9 +14,9 @@
         <nav>
             <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
                 <li class="home"><a href="index.html">HOME</a></li>
-                <li class="pool"><a href="pool.html" target="_blank" rel="noopener">POOL</a></li>
-                <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
-                <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
+                <li class="pool"><a href="pool.html">POOL</a></li>
+                <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
+                <li class="gym"><a href="gym.html">GYM</a></li>
                 <li class="bar"><a href="bar.html">BAR</a></li>
             </ul>
         </nav>
