--- a/form.html
+++ b/form.html
@@ -1,77 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Form</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Form</title>
 </head>
+
 <body id="form">
   <main id="main-form">
-  <form action="#" method="post">
-        <fieldset class="join-form">
-          <legend id="form-title">Register to join us!</legend>
-           <div class="fieldinput">
-              <label for="fname">First Name</label>
-              <input type="text" id="fname" name="first_name" placeholder=" Please enter your full name" required>
-           </div>  
-            <div class="fieldinput">
-              <label for="lname">Last Name</label>
-              <input type="text" id="lname" name="last_name" placeholder=" Please enter your last name" required>
-           </div>
-           <div class="fieldinput">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder=" Please enter your email" required>
-         </div>
-         <div class="fieldinput">
+    <form action="#" method="post">
+      <fieldset class="join-form">
+        <legend id="form-title">Register to join us!</legend>
+        <div class="fieldinput">
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="first_name" placeholder=" Please enter your full name" required>
+        </div>
+        <div class="fieldinput">
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="last_name" placeholder=" Please enter your last name" required>
+        </div>
+        <div class="fieldinput">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder=" Please enter your email" required>
+        </div>
+        <div class="fieldinput">
           <label for="password">Password</label>
           <input type="password" id="password" name="password" placeholder=" Please enter your password" required>
-       </div>
-       <div class="fieldinput">
-       <label for="dog-breed">Select Dog Breed:</label>
-    <select name="dog-breed" id="dog-breed">
-        <option value="select">Select</option>
-        <option value="american-staffordshire-terrier">American Staffordshire Terrier</option>
-        <option value="pitbull">Pitbull</option>
-        <option value="golden-retriever">Golden Retriever</option>
-        <option value="chihuahua">Chihuahua</option>
-        <option value="jack-russel">Jack Russel</option>
-        <option value="samoyed">Samoyed</option>
-        <option value="other">Other</option>
-    </select>
-  </div>
-  <div class="fieldinput">
-    <label for="gender">Select Gender:</label>
-    <select>
-      <option value="select">Select</option>
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-    </select>
-  </div>
-  <div class="fieldinput">
-    <label for="phone-number">Phone Number</label>
-    <input type="text" id="phone-number" name="phone-number" placeholder=" Please enter your phone number" required>
- </div>
- <div class="fieldinput">
-  <input type="checkbox" id="checkbox" name="checkbox" required>
-  <label for="checkbox">I agree to terms and conditions
-  </label>
-</div>
-<div class="fieldinput">
-  <button class="btn" type="submit">Join Now</button>
-  <input type="reset" value="Reset Form" class="btn">
-</div>
-</fieldset>
-</form>
-<div class="footer-img"></div>
-</main>
-<footer>
-  <ul class="footer">CONTACT US!
+        </div>
+        <div class="fieldinput">
+          <label for="dog-breed">Select Dog Breed:</label>
+          <select name="dog-breed" id="dog-breed">
+            <option value="select">Select</option>
+            <option value="american-staffordshire-terrier">American Staffordshire Terrier</option>
+            <option value="pitbull">Pitbull</option>
+            <option value="golden-retriever">Golden Retriever</option>
+            <option value="chihuahua">Chihuahua</option>
+            <option value="jack-russel">Jack Russel</option>
+            <option value="samoyed">Samoyed</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
+        <div class="fieldinput">
+          <label for="gender">Select Gender:</label>
+          <select>
+            <option value="select">Select</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+        </div>
+        <div class="fieldinput">
+          <label for="phone-number">Phone Number</label>
+          <input type="text" id="phone-number" name="phone-number" placeholder=" Please enter your phone number"
+            required>
+        </div>
+        <div class="fieldinput">
+          <input type="checkbox" id="checkbox" name="checkbox" required>
+          <label for="checkbox">I agree to terms and conditions
+          </label>
+        </div>
+        <div class="fieldinput">
+          <button class="btn" type="submit">Join Now</button>
+          <input type="reset" value="Reset Form" class="btn">
+        </div>
+      </fieldset>
+    </form>
+    <div class="footer-img"></div>
+  </main>
+  <footer>
+    <ul class="footer">CONTACT US!
       <li>Email: customer-service@puppower.com</li>
       <li>Tel: +353 83 1234 567</li>
       <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
-  </ul>
-</footer>
+    </ul>
+  </footer>
 </body>
+
 </html>
