--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Pup Power</title>
 </head>
- 
+
 <body class="background">
-    <header class="nav">  
-        <nav>
+    <header>
+        <nav class="nav">
             <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
                 <li class="home"><a href="index.html">HOME</a></li>
-                <li class="pool"><a href="pool.html" target="_blank" rel="noopener">POOL</a></li>
-                <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
-                <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
-                <li class="bar"><a href="bar.html" target="_blank" rel="noopener">BAR</a></li>
+                <li class="pool"><a href="pool.html">POOL</a></li>
+                <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
+                <li class="gym"><a href="gym.html">GYM</a></li>
+                <li class="bar"><a href="bar.html">BAR</a></li>
             </ul>
         </nav>
     </header>
-        <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
+    <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     <div class="container-1">
-     <h2 id="pool-title"><a href="pool.html" target="_blank" rel="noopener">POOL</a></h2>
-    <p class="pool-text">Check out our pool area! Our exclusive 10m swimming pools are fitted for every breed. 
-        Our pools are equiped with 16kW Hewalex heat pumps to ensure pleasant temperatures all year round, cleaned
+        <h2 id="pool-title"><a href="pool.html">POOL</a></h2>
+        <p class="pool-text">Check out our pool area! Our exclusive 10m swimming pools are fitted for every breed.
+            Our pools are equiped with 16kW Hewalex heat pumps to ensure pleasant temperatures all year round, cleaned
             thoroughly throughout the day with a brand new filtering system to ensure your dogs
             health is a top priority. We offer free swimming lessons to pups under 12 months. All
             our swimming pools are PETA approved.</p>
     </div>
     <div class="container-2">
-        <h2 id="playground-title"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></h2>
+        <h2 id="playground-title"><a href="playground.html">PLAYGROUND</a></h2>
         <p class="playground-text">Visit our playground!Formerly known as St. Anne's park, newly renovated,fully
             equiped dog playground.Ranging from professional training equipment to chewy toys. We have it
             all! The playground is spread acros 100 acres to accommodate all your needs. Our playground
@@ -39,22 +39,22 @@
             your pup!</p>
     </div>
     <div class="container-3">
-        <h2 id="gym-title"><a href="gym.html" target="_blank" rel="noopener">GYM</a></h2>
-       <p class="gym-text">Try out our gym! Ireland's first dog only gym! Need help preparing for a
-        competition or just staying in shape, we got you covered! With more than 250 machines available,
-        all ground floor for accessibility, free lockers and staff on site ready to help! The gym is
-        thoroughly cleaned and sanitezed after every visit.</p>
+        <h2 id="gym-title"><a href="gym.html">GYM</a></h2>
+        <p class="gym-text">Try out our gym! Ireland's first dog only gym! Need help preparing for a
+            competition or just staying in shape, we got you covered! With more than 250 machines available,
+            all ground floor for accessibility, free lockers and staff on site ready to help! The gym is
+            thoroughly cleaned and sanitezed after every visit.</p>
     </div>
     <div class="container-4">
-        <h2 id="bar-title"><a href="bar.html" target="_blank" rel="noopener">BAR</a></h2>
+        <h2 id="bar-title"><a href="bar.html">BAR</a></h2>
         <p class="bar-text">
             Relax in our bar! A perfect place to end the day (Or start😉)! Enjoy our wide
-                range of food and drinks. Schedule an appointment for your pup in any of our three facilities and
-                enjoy a drink on us! Bring your pup with you and get a complimentary puppaccino with your
-                order. For really tired pups there is a lounge area with All You Can Chew! Amazing, right?
+            range of food and drinks. Schedule an appointment for your pup in any of our three facilities and
+            enjoy a drink on us! Bring your pup with you and get a complimentary puppaccino with your
+            order. For really tired pups there is a lounge area with All You Can Chew! Amazing, right?
         </p>
     </div>
-   
+
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
