--- a/pool.html
+++ b/pool.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>Pup Power</title>
     </head>
      
@@ -14,11 +14,11 @@
         <header  class="nav">   
             <nav> 
                 <ul id="menu1"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
-                    <li class="home"><a href="index.html" target="_blank" rel="noopener">HOME</a></li>
+                    <li class="home"><a href="index.html">HOME</a></li>
                     <li class="pool"><a href="pool.html">POOL</a></li>
-                    <li class="playground"><a href="playground.html" target="_blank" rel="noopener">PLAYGROUND</a></li>
-                    <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
-                    <li class="bar"><a href="bar.html" target="_blank" rel="noopener">BAR</a></li>
+                    <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
+                    <li class="gym"><a href="gym.html">GYM</a></li>
+                    <li class="bar"><a href="bar.html">BAR</a></li>
                 </ul>
             </nav>
         </header>
@@ -28,7 +28,7 @@
            <p class="march-offer">Become a GOLD member for only €50 a month!
             Enjoy all benefits of our gold members for half a price this March. 
             This promotion includes usage of pool and the bar only. T&C's apply.</p>
-            <a href="form.html" target="_blank" rel="noopener" class="form-btn">
+            <a href="form.html"class="form-btn">
                 Join Now
             </a>
            </div>
@@ -41,8 +41,8 @@
         </div>
     
 
-    <footer class="footer-pool">
-        <ul class="footer1">CONTACT US!
+    <footer>
+        <ul class>CONTACT US!
             <li>Email: customer-service@puppower.com</li>
             <li>Tel: +353 83 1234 567</li>
             <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
