--- a/playground.html
+++ b/playground.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>Pup Power</title>
     </head>
      
@@ -13,11 +13,11 @@
         <header class="nav">  
             <nav>
                 <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
-                    <li class="home"><a href="index.html" target="_blank" rel="noopener">HOME</a></li>
-                    <li class="pool"><a href="pool.html" target="_blank" rel="noopener">POOL</a></li>
+                    <li class="home"><a href="index.html">HOME</a></li>
+                    <li class="pool"><a href="pool.html">POOL</a></li>
                     <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
-                    <li class="gym"><a href="gym.html" target="_blank" rel="noopener">GYM</a></li>
-                    <li class="bar"><a href="bar.html" target="_blank" rel="noopener">BAR</a></li>
+                    <li class="gym"><a href="gym.html">GYM</a></li>
+                    <li class="bar"><a href="bar.html">BAR</a></li>
                 </ul>
             </nav>
         </header>
