Change background, change font add main image

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             health is a top priority. We offer free swimming lessons to pups under 12 months. All
             our swimming pools are PETA approved.</p>
     </div>
+    
     <div class="container-2">
         <h2 id="playground-title"><a href="playground.html">PLAYGROUND</a></h2>
         <p class="playground-text">Visit our playground!Formerly known as St. Anne's park, newly renovated,fully
@@ -56,6 +57,7 @@
     </div>
 
     <footer>
+        <img src="assets/images/stock-vector-french-bulldog-on-a-transparent-background-a-cute-little-dog-different-colors-of-the-french-1768261970.jpg" alt="" class="footer-img">
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
             <li>Tel: +353 83 1234 567</li>
