Change grid column size

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     </header>
     <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
     <div class="container-1">
-        <h2 id="pool-title"><a href="pool.html">POOL</a></h2>
-        <p class="pool-text">Check out our pool area! Our exclusive 10m swimming pools are fitted for every breed.
+       <p><span id="pool-title"><a href="pool.html">POOL</a></span>
+            Check out our pool area! Our exclusive 10m swimming pools are fitted for every breed.
             Our pools are equiped with 16kW Hewalex heat pumps to ensure pleasant temperatures all year round, cleaned
             thoroughly throughout the day with a brand new filtering system to ensure your dogs
             health is a top priority. We offer free swimming lessons to pups under 12 months. All
             our swimming pools are PETA approved.</p>
     </div>
     
-    <div class="container-2">
+    <!-- <div class="container-2">
         <h2 id="playground-title"><a href="playground.html">PLAYGROUND</a></h2>
         <p class="playground-text">Visit our playground!Formerly known as St. Anne's park, newly renovated,fully
             equiped dog playground.Ranging from professional training equipment to chewy toys. We have it
@@ -54,7 +54,7 @@
             enjoy a drink on us! Bring your pup with you and get a complimentary puppaccino with your
             order. For really tired pups there is a lounge area with All You Can Chew! Amazing, right?
         </p>
-    </div>
+    </div> -->
 
     <footer>
         <img src="assets/images/stock-vector-french-bulldog-on-a-transparent-background-a-cute-little-dog-different-colors-of-the-french-1768261970.jpg" alt="" class="footer-img">
