--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="background">
     <header>
         <nav class="nav">
-            <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+            <ul id="menu"><span id="logo">PUP POWER<i class="fa-solid fa-paw"></i></span>
                 <li class="home"><a href="index.html">HOME</a></li>
                 <li class="pool"><a href="pool.html">POOL</a></li>
                 <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
@@ -31,9 +31,10 @@
         </nav>
 <!-- Top Navigation Hamburger Menu -->
     <div class="topnav">
-    <a href="index.html" class="active">HOME</a>
+    <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
     <div id="myLinks">
-      <a href="pool.html">POOL</a>
+    <a href="index.html">HOME</a>
+    <a href="pool.html">POOL</a>
       <a href="playground.html">PLAYGROUND</a>
       <a href="gym.html">GYM</a>
       <a href="bar.html">BAR</a>
