Change main image on pool html, add styling

--- a/pool.html
+++ b/pool.html
@@ -18,7 +18,7 @@
     <title>Pup Power</title>
 </head>
 
-<body  class="background">
+<body  id="pool-body">
     <header>
         <nav class="nav">
        
@@ -31,7 +31,7 @@
             </ul>
         </nav>
 <!-- Top Navigation Hamburger Menu -->
-    <div class="topnav">
+    <div class="topnav" id="topnav">
     <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
     <div id="myLinks">
     <a href="index.html">HOME</a>
@@ -47,13 +47,16 @@
     </header>
     <h2 class="intro-text-box1">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
     <div class="container-p">
-       <p><span id="march-title">MARCH OFFER</span> Become a GOLD member for only €50 a month!
-        Enjoy all benefits of our gold members for half a price this March. 
-        This promotion includes usage of pool and the bar only. T&C's apply.</p>
-        <a href="form.html"class="form-btn">
-            Join Now
+        <h3 id="march-title">MARCH OFFER</h3> 
+        <p>Become a GOLD member for only €50 a month!
+         Enjoy all benefits of our gold members for half a price this March. 
+         This promotion includes usage of pool and the bar only. T&C's apply.</p>
+    </div>
+    <div class="container-boxer">
+         <a href="form.html"class="form-btn">
+            JOIN NOW
         </a>
-       </div>
+    </div>
     
     <!-- <div class="container-2">
         <h2 id="playground-title"><a href="playground.html">PLAYGROUND</a></h2>
