Add basic table to pool html

--- a/pool.html
+++ b/pool.html
@@ -51,38 +51,56 @@
         <p>Become a GOLD member for only €50 a month!
          Enjoy all benefits of our gold members for half a price this March. 
          This promotion includes usage of pool and the bar only. T&C's apply.</p>
+         <table class="time-table">
+            <tr>
+                <th></th>
+              <th>OPENING HOURS</th>
+              <th>COACH</th>
+              <th>AGE-GROUP</th>
+            </tr>
+            <tr>
+              <td>Monday</td>
+              <td>08:00 - 21:00</td>
+              <td>Katherine Gray</td>
+              <td>0 - 3 years</td>
+              </tr>
+            <tr>
+                <td>Tuesday</td>
+                <td>08:00 - 21:00</td>
+              <td>David Tank</td>
+              <td>3 - 7 years</td>
+            </tr>
+            <tr>
+                <td>Wednesday</td>
+                <td>08:00 - 21:00</td>
+              <td>Corinne Mills</td>
+              <td>7 - 16 years</td>
+            </tr>
+            <tr>
+                <td>Thursday</td>
+                <td>08:00 - 18:00</td>
+              <td>Katherine Gray</td>
+              <td>0 - 3 years</td>
+            </tr>
+            <tr>
+                <td>Friday</td>
+                <td>08:00 - 18:00</td>
+                <td>Corinne Mills</td>
+                <td>7 - 16 years</td>
+            </tr>
+            <tr>
+                <td>Saturday</td>
+                <td>08:00 - 18:00</td>
+                <td>David Tank</td>
+                <td>3 - 7 years</td>
+            </tr>
+          </table>
     </div>
     <div class="container-boxer">
          <a href="form.html"class="form-btn">
             JOIN NOW
         </a>
     </div>
-    
-    <!-- <div class="container-2">
-        <h2 id="playground-title"><a href="playground.html">PLAYGROUND</a></h2>
-        <p class="playground-text">Visit our playground!Formerly known as St. Anne's park, newly renovated,fully
-            equiped dog playground.Ranging from professional training equipment to chewy toys. We have it
-            all! The playground is spread acros 100 acres to accommodate all your needs. Our playground
-            is fully fenced and monitored throughout the day offering a safe environment for you and
-            your pup!</p>
-    </div>
-    <div class="container-3">
-        <h2 id="gym-title"><a href="gym.html">GYM</a></h2>
-        <p class="gym-text">Try out our gym! Ireland's first dog only gym! Need help preparing for a
-            competition or just staying in shape, we got you covered! With more than 250 machines available,
-            all ground floor for accessibility, free lockers and staff on site ready to help! The gym is
-            thoroughly cleaned and sanitezed after every visit.</p>
-    </div>
-    <div class="container-4">
-        <h2 id="bar-title"><a href="bar.html">BAR</a></h2>
-        <p class="bar-text">
-            Relax in our bar! A perfect place to end the day (Or start😉)! Enjoy our wide
-            range of food and drinks. Schedule an appointment for your pup in any of our three facilities and
-            enjoy a drink on us! Bring your pup with you and get a complimentary puppaccino with your
-            order. For really tired pups there is a lounge area with All You Can Chew! Amazing, right?
-        </p>
-    </div> -->
-
     <footer id="footer">
         <img src="assets/images/stock-vector-french-bulldog-on-a-transparent-background-a-cute-little-dog-different-colors-of-the-french-1768261970.jpg" alt="" class="footer-img">
         <ul class="footer" id="footer-p">CONTACT US!
