Add media queries for table

--- a/pool.html
+++ b/pool.html
@@ -52,12 +52,15 @@
          Enjoy all benefits of our gold members for half a price this March. 
          This promotion includes usage of pool and the bar only. T&C's apply.</p>
          <table class="time-table">
+        <thead>
             <tr>
-                <th></th>
+                <th>DAYS</th>
               <th>OPENING HOURS</th>
               <th>COACH</th>
               <th>AGE-GROUP</th>
             </tr>
+        </thead>
+        <tbody>
             <tr>
               <td>Monday</td>
               <td>08:00 - 21:00</td>
@@ -94,6 +97,7 @@
                 <td>David Tank</td>
                 <td>3 - 7 years</td>
             </tr>
+        </tbody>
           </table>
     </div>
     <div class="container-boxer">
