Add borders to divs and add new p in pool.html

--- a/pool.html
+++ b/pool.html
@@ -105,6 +105,11 @@
             JOIN NOW
         </a>
     </div>
+    
+    <div class="staff">
+        <p class="staff-header">Meet Our Coaches!</p>
+
+    </div>
     <footer id="footer">
         <img src="assets/images/stock-vector-french-bulldog-on-a-transparent-background-a-cute-little-dog-different-colors-of-the-french-1768261970.jpg" alt="" class="footer-img">
         <ul class="footer" id="footer-p">CONTACT US!
