Add coach images to pool.html page

--- a/pool.html
+++ b/pool.html
@@ -105,10 +105,11 @@
             JOIN NOW
         </a>
     </div>
-    
     <div class="staff">
         <p class="staff-header">Meet Our Coaches!</p>
-
+        <img src="assets/images/corinne-img.jpg" alt="Waist up portrait of a black haired woman smiling to the camera with crossed arms" class="corinne">
+        <img src="assets/images/katherine-img.jpg" alt="Waist up portrait of a brown haired woman smiling to the camera with crossed arms" class="katherine">
+        <img src="assets/images/david-img.jpg" alt="Waist up portrait of a man smiling to the camera with crossed arms" class="david">
     </div>
     <footer id="footer">
         <img src="assets/images/stock-vector-french-bulldog-on-a-transparent-background-a-cute-little-dog-different-colors-of-the-french-1768261970.jpg" alt="" class="footer-img">
