Add coach images and styling

--- a/pool.html
+++ b/pool.html
@@ -51,6 +51,7 @@
         <p>Become a GOLD member for only €50 a month!
          Enjoy all benefits of our gold members for half a price this March. 
          This promotion includes usage of pool and the bar only. T&C's apply.</p>
+<!-- Table -->
          <table class="time-table">
         <thead>
             <tr>
@@ -106,13 +107,30 @@
         </a>
     </div>
     <div class="staff">
-        <p class="staff-header">Meet Our Coaches!</p>
+        <p class="staff-header">MEET OUR COACHES!</p>
+    <div class="container-s">
         <img src="assets/images/corinne-img.jpg" alt="Waist up portrait of a black haired woman smiling to the camera with crossed arms" class="corinne">
-        <img src="assets/images/katherine-img.jpg" alt="Waist up portrait of a brown haired woman smiling to the camera with crossed arms" class="katherine">
-        <img src="assets/images/david-img.jpg" alt="Waist up portrait of a man smiling to the camera with crossed arms" class="david">
+        <span id="name">CORINNE</span>
     </div>
+        <p class="staff-c">Corinne is a certified swimming coach, active member of the International Swimming Foundation and the Swimming Institute at St.James Hospital.She describes herself as a motivational and easy going coach with the purpose to guide and teach while having fun with her clients.  
+        </p>
+    <div class="container-s">
+        <img src="assets/images/katherine-img.jpg" alt="Waist up portrait of a brown haired woman smiling to the camera with crossed arms" class="katherine">
+        <span id="name">KATHERINE</span>
+    </div>
+        <p class="staff-k">
+          Katherine is a graduate of The Veterinary Medicine College, Dublin University August 2015. She uses her knowledge to help dogs overcome their fear of water. Katherine's been in the swimming industry for 4 years.
+        </p>
+      <div class="container-s">
+        <img src="assets/images/david-img.jpg" alt="Waist up portrait of a man smiling to the camera with crossed arms" class="david">
+        <span id="name">DAVID</span>
+      </div>
+        <p class="staff-d">
+          David is from Cork, Ireland. After earning an B.A. in Science, he worked at the Ocean World Exposition in Kerry where he was a leading scientist. Since the start of the pandemic, he decided to join our team. David has been a Swimming Coach at Pup Power since 2019.
+        </p>
+    </div>
+
     <footer id="footer">
-        <img src="assets/images/stock-vector-french-bulldog-on-a-transparent-background-a-cute-little-dog-different-colors-of-the-french-1768261970.jpg" alt="" class="footer-img">
         <ul class="footer" id="footer-p">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
             <li>Tel: +353 83 1234 567</li>
