Style new images and text for small screens

--- a/pool.html
+++ b/pool.html
@@ -129,6 +129,9 @@
           David is from Cork, Ireland. After earning an B.A. in Science, he worked at the Ocean World Exposition in Kerry where he was a leading scientist. Since the start of the pandemic, he decided to join our team. David has been a Swimming Coach at Pup Power since 2019.
         </p>
     </div>
+    <div class="g-pinscher">
+
+    </div>
 
     <footer id="footer">
         <ul class="footer" id="footer-p">CONTACT US!
