Add and position image of inner pool

--- a/pool.html
+++ b/pool.html
@@ -130,8 +130,9 @@
         </p>
     </div>
     <div class="g-pinscher">
-
+      <div id="inner-pool"><img src="assets/images/inner-pool.jpg" alt="Iner pool"></div>
     </div>
+    
 
     <footer id="footer">
         <ul class="footer" id="footer-p">CONTACT US!
