Edit new images to fit big screens

--- a/pool.html
+++ b/pool.html
@@ -107,7 +107,7 @@
         </a>
     </div>
      <div class="staff">
-        <p class="staff-header">MEET OUR COACHES!</p>
+        <p class="staff-header">MEET YOUR SWIMMING COACHES!</p>
     <div class="container-s">
         <img src="assets/images/corinne-img.jpg" alt="Waist up portrait of a black haired woman smiling to the camera with crossed arms" class="corinne">
         <span id="name">CORINNE</span>
@@ -131,10 +131,7 @@
     </div>
     <div class="g-pinscher" id="g-p">
       <div id="inner-pool"><img src="assets/images/inner-pool.jpg" alt="Iner pool"></div>
-      <span>We've got inner pools as well!</span>
     </div>
-    
-
     <footer id="footer">
         <ul class="footer" id="footer-p">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
