Add second image on main page, style same as first one

--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@
             our swimming pools are PETA approved.</p>
     </div>
     
-    <!-- <div class="container-2">
-        <h2 id="playground-title"><a href="playground.html">PLAYGROUND</a></h2>
-        <p class="playground-text">Visit our playground!Formerly known as St. Anne's park, newly renovated,fully
+   <div class="container-2">
+    <p><span id="playground-title"><a href="playground.html">PLAYGROUND</a></span>
+        Visit our playground!Formerly known as St. Anne's park, newly renovated,fully
             equiped dog playground.Ranging from professional training equipment to chewy toys. We have it
             all! The playground is spread acros 100 acres to accommodate all your needs. Our playground
             is fully fenced and monitored throughout the day offering a safe environment for you and
             your pup!</p>
     </div>
+     <!-- 
     <div class="container-3">
         <h2 id="gym-title"><a href="gym.html">GYM</a></h2>
         <p class="gym-text">Try out our gym! Ireland's first dog only gym! Need help preparing for a
