Change color scheme of the website

--- a/pool.html
+++ b/pool.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="nav">
        
-            <ul id="menu" class="menu-p"><span id="logo">PUP POWER<i class="fa-solid fa-paw"></i></span>
+            <ul id="menu" class="menu-p"><span id="logo">PUP POWER  <i class="fa-solid fa-paw"></i></span>
                 <li class="home"><a href="index.html">HOME</a></li>
                 <li class="pool"><a href="pool.html">POOL</a></li>
                 <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
@@ -32,7 +32,7 @@
         </nav>
 <!-- Top Navigation Hamburger Menu -->
     <div class="topnav" id="topnav">
-    <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
+    <a href="index.html" class="active" id="logo-mobile">PUP POWER<i class="fa-solid fa-paw"></i></a>
     <div id="myLinks">
     <a href="index.html">HOME</a>
     <a href="pool.html">POOL</a>
@@ -45,12 +45,13 @@
     </a>
   </div>
     </header>
-    <h2 class="intro-text-box1">HELLO SWIMMERS! WELCOME TO OUR POOL!</h2>
+    <h2 class="intro-text-box1">Hello Swimmers, Welcome to our pool!</h2>
+    <div id="offer">
+      <h3 class="march-title">MARCH OFFER</h3> 
+      <p class="march-p">Become a <strong>GOLD</strong> member for only <strong>€50</strong> a month!
+       Enjoy all benefits of our gold members for half a price this March. 
+       This promotion includes usage of pool and the bar only. T&C's apply.</p></div>
     <div class="container-p">
-        <h3 id="march-title">MARCH OFFER</h3> 
-        <p>Become a GOLD member for only €50 a month!
-         Enjoy all benefits of our gold members for half a price this March. 
-         This promotion includes usage of pool and the bar only. T&C's apply.</p>
 <!-- Table -->
          <table class="time-table">
         <thead>
@@ -62,37 +63,37 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr class="unpair">
               <td>Monday</td>
               <td>08:00 - 21:00</td>
               <td>Katherine Gray</td>
               <td>0 - 3 years</td>
-              </tr>
-            <tr>
+            </tr>
+            <tr class="pair">
                 <td>Tuesday</td>
                 <td>08:00 - 21:00</td>
               <td>David Tank</td>
               <td>3 - 7 years</td>
             </tr>
-            <tr>
+            <tr class="unpair">
                 <td>Wednesday</td>
                 <td>08:00 - 21:00</td>
               <td>Corinne Mills</td>
               <td>7 - 16 years</td>
             </tr>
-            <tr>
+            <tr class="pair">
                 <td>Thursday</td>
                 <td>08:00 - 18:00</td>
               <td>Katherine Gray</td>
               <td>0 - 3 years</td>
             </tr>
-            <tr>
+            <tr class="unpair">
                 <td>Friday</td>
                 <td>08:00 - 18:00</td>
                 <td>Corinne Mills</td>
                 <td>7 - 16 years</td>
             </tr>
-            <tr>
+            <tr class="pair">
                 <td>Saturday</td>
                 <td>08:00 - 18:00</td>
                 <td>David Tank</td>
@@ -101,13 +102,17 @@
         </tbody>
           </table>
     </div>
+    <div id="swim">
+      <h3 class="march-title">START SWIMMING</h3>
+      <p class="pool-paragraph">Join us and get exclusive offers every week.<br>Click <strong>"Join Now"</strong> button bellow and start your membership now!</p>
+    </div>
     <div class="container-boxer">
-         <a href="form.html"class="form-btn">
+       <a href="form.html"class="form-btn">
             JOIN NOW
         </a>
     </div>
      <div class="staff">
-        <p class="staff-header">MEET YOUR SWIMMING COACHES!</p>
+        <h3 class="staff-header">MEET YOUR SWIMMING COACHES!</h3>
     <div class="container-s">
         <img src="assets/images/corinne-img.jpg" alt="Waist up portrait of a black haired woman smiling to the camera with crossed arms" class="corinne">
         <span id="name">CORINNE</span>
