Add h2 to playground page

--- a/pool.html
+++ b/pool.html
@@ -101,6 +101,19 @@
             </tr>
         </tbody>
           </table>
+          <div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, sint. 
+              Laudantium rerum modi sunt quod qudipisicing elit. Temporibus, sint. 
+              Laudantium rerum modi sunt quod quos possimus enim nam accusamus facilis aliquam molestias, 
+              id dolorem error. Vero sunt laborum iusto.dipisicing elit. Temporibus, sint. 
+              Laudantium rerum modi sunt quod quos possimus enim nam accusamus facilis aliquam molestias, 
+              id dolorem error. Vero sunt laborum iusto.dipisicing elit. Temporibus, sint. 
+              Laudantium rerum modi sunt quod quos possimus enim nam accusamus facilis aliquam molestias, 
+              id dolorem error. Vero sunt laborum iusto.os possimus enim nam accusamus facilis aliquam molestias, 
+              id dolorem error. Vero sunt laborumdipisicing elit. Temporibus, sint. 
+              Laudantium rerum modi sunt quod quos possimus enim nam accusamus facilis aliquam molestias, 
+              id dolorem error. Vero sunt laborum iusto. iusto.</p>
+          </div>
     </div>
     <div id="swim">
       <h3 class="march-title">START SWIMMING</h3>
