--- a/playground.html
+++ b/playground.html
@@ -44,6 +44,7 @@
     </a>
   </div>
     </header>
+    <h2 class="intro-text-box1">A walk a day keeps the vet away</h2>
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
