--- a/playground.html
+++ b/playground.html
@@ -18,7 +18,7 @@
     <title>Pup Power</title>
 </head>
 
-<body class="background">
+<body id="playground">
     <header>
         <nav class="nav">
             <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
@@ -42,9 +42,14 @@
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
-  </div>
     </header>
-    <h2 class="intro-text-box1">A walk a day keeps the vet away</h2>
+    <h2 class="intro-text-box1">A play a day keeps the vet away!</h2>
+    <div class="container-play">
+      <p>Hundred acres of joy! Features Include: Agility taster course, dig-pit, scent pots, living-willow dome and tunnels, wooden bridge, weave poles, tree walk, wobble-board, plastic tunnels, cavaletti jumps, tyre ring.</p>
+    </div>
+    <div class="play-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quos voluptate inventore dolor aliquam, id at provident enim neque. Earum sint nemo excepturi consequuntur laborum! Dolores quae aut similique repudiandae?</p>
+    </div>
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
